# multiview_incabin_dataset

./: .gitignore  README.md  pyproject.toml
ndf_dataset/: __init__.py  dataset.py  io.py  la.py  transforms.py  utility.py  viz.py
scripts/autolabeling/: README.md  requirements.txt
scripts/autolabeling/scripts/: bbox_cleaner.py  bev_aggregation.py  create_body_poses.py  create_seg_masks.py  extract_3d_poses.py  poses_cleaner.py  track_seg.py
scripts/converters/: README.md  convert_rosbag.py  export_nuscenes.py
scripts/converters/config/: config.yaml
scripts/converters/urdf/: beintelli_v1.urdf
