[build-system]
requires = ["setuptools>=79.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndf-dataset"
version = "0.1.0"
description = "A Python package with main functions inside the ndf_dataset directory."
authors = [
    { name="Evgeny Gorelik", email="evgeny.gorelik@gt-arc.com" }
]
dependencies = [
    "numpy==1.26.4",
    "pillow==10.2.0",
    "tqdm==4.67.3",
    "scipy==1.17.1",
    "matplotlib-inline==0.1.7",
    "opencv-python==4.11.0.86",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/EvgenyGorelik/multiview_incabin_dataset"

[tool.setuptools]
package-dir = {"ndf_dataset" = "ndf_dataset"}
